--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,5 +1,16 @@
+#menu-itens {
+	text-align: right;
+}
+
+#sobre-photo {
+	height: 20%;	
+}
+
 img {
-	display: block;
+	display: inline-block;
+}
+
+img.port-img {	
 	width: 100%;
 	height: 100%;
 	padding: 2%;
@@ -7,4 +18,16 @@ img {
 
 figcaption.port-caption {
 	text-align: center;	
+}
+
+p {
+	font-size: 48px;
+}
+
+h1 {
+	text-align: center;
+}
+
+section {
+	margin:10%;
 }
