--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,4 @@
+
 body {
 	background-image: url("../img/grunge-background.jpg");
 }
@@ -95,4 +96,17 @@ div.form>input {
 	background-color: #0077B5;
 	color: #fff;
  	border-color: #2e6da4;
+}
+
+/* Rodape */
+footer > div {
+	padding-top: 2%;
+	background-color: #000;		
+	color: #fff;	
+}
+
+.rodape {
+	font-size: 10pt;
+	color: #fff;
+	text-align: center;
 }
