Substituindo imagens pelos suas respectivas urls

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,6 +5,7 @@ body {
 }
 
 p {
+	font-family: 'Open Sans', sans-serif;
 	font-size: 24px;
 	color: #d3d3d3;
 	text-align: justify;
@@ -45,7 +46,8 @@ div#menu-itens {
 
 /* Sobre */
 #sobre {
-	background-image: url("../img/grunge-background.jpg");
+	/*background-image: url("../img/grunge-background.jpg");*/
+	background-image: url("https://lhvmdq-ch3301.files.1drv.com/y4mhadtthdqe7004vc0Qk5q0FxjeUlTqmELXhVv-cSp9jGUsZTG3VW57P_pOM3b24yuDQpJ5K2YtsQvw2h41ft_p83FWvNGiQqSj5aA5MvTBQ6wgvGQYcsOKFecOwnZuqSR0fMSol-RK-23jPY33w1eRR84XLk70k9Cd-tkS_JPLuoex2PcxYLhlCOjz6GJCfr97OmowreGKCLFuFMYjSyuYg?width=1920&height=1280&cropmode=none");
 	padding-top: 25%;	
 }
 
@@ -62,9 +64,15 @@ div#menu-itens {
 	text-align: center;
 }
 
+.row-icon > div > img {
+	width: 5rem;
+	height: 5rem;
+}
+
 /* Portfolio */
 #portfolio {
-	background-image: url("../img/black-background.jpg");
+	/*background-image: url("../img/black-background.jpg");*/
+	background-image: url("https://lhvodq-ch3301.files.1drv.com/y4mGhLSkeMJN35p0hZ3GE8-6IKieeqrJBJbNsyaBiyaABpayTTe3jeVNvOwmwDNqag0pGywHkwWoug42h6wofmjtv8pnsVpcqf0E5bPFZS_1CLgMtfD8r5SF8VDFQTQO_2R2GxSetgL8d72oUB6zG9cZ-6XnZUj_aWm-b_VdCxI7Ck8IMeHKBNgbs0Omr75O5HYIelHIwLwPCuwRWIjXVjfmg?width=960&height=600&cropmode=none");
 	width: 100%; 
 	padding: 2% 0;
 	color: #fff;
@@ -153,6 +161,11 @@ footer {
 
 	.row-icon {
 		font-size: 10rem;
+	}
+
+	.row-icon > div > img {
+		width: 10rem;
+		height: 10rem;
 	}
 
 	#contato-email {
