Alterando a url das imagens

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -47,7 +47,7 @@ div#menu-itens {
 /* Sobre */
 #sobre {
 	/*background-image: url("../img/grunge-background.jpg");*/
-	background-image: url("https://lhvmdq-ch3301.files.1drv.com/y4mhadtthdqe7004vc0Qk5q0FxjeUlTqmELXhVv-cSp9jGUsZTG3VW57P_pOM3b24yuDQpJ5K2YtsQvw2h41ft_p83FWvNGiQqSj5aA5MvTBQ6wgvGQYcsOKFecOwnZuqSR0fMSol-RK-23jPY33w1eRR84XLk70k9Cd-tkS_JPLuoex2PcxYLhlCOjz6GJCfr97OmowreGKCLFuFMYjSyuYg?width=1920&height=1280&cropmode=none");
+	background-image: url("http://imageshack.com/a/img924/9952/3C06CN.jpg");
 	padding-top: 25%;	
 }
 
@@ -72,7 +72,7 @@ div#menu-itens {
 /* Portfolio */
 #portfolio {
 	/*background-image: url("../img/black-background.jpg");*/
-	background-image: url("https://lhvodq-ch3301.files.1drv.com/y4mGhLSkeMJN35p0hZ3GE8-6IKieeqrJBJbNsyaBiyaABpayTTe3jeVNvOwmwDNqag0pGywHkwWoug42h6wofmjtv8pnsVpcqf0E5bPFZS_1CLgMtfD8r5SF8VDFQTQO_2R2GxSetgL8d72oUB6zG9cZ-6XnZUj_aWm-b_VdCxI7Ck8IMeHKBNgbs0Omr75O5HYIelHIwLwPCuwRWIjXVjfmg?width=960&height=600&cropmode=none");
+	background-image: url("http://imageshack.com/a/img922/2739/I7JENK.jpg");
 	width: 100%; 
 	padding: 2% 0;
 	color: #fff;
